--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,119 +1,61 @@
 name: Deploy frontend application
 
-'on':
-
-push:
-
-branches:
-
-- main
+on:
+  push:
+    branches:
+      - main
 
 jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-docker:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-runs-on: ubuntu-latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
--
+      - name: Prepare the docker-compose run
+        run: |
+          ls -l
 
-name: Checkout
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: apogee0/234-deploylab-frontend:latest  # 替换为你的DockerHub用户名
 
-uses: actions/checkout@v4
+      - name: Copy file via SSH
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST_SERVER }}
+          username: ${{ secrets.HOST_USER_NAME }}
+          key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
+          port: 22
+          source: "docker-compose.yml"
+          target: "/home/ubuntu/frontend"
 
--
-
-name: Set up QEMU
-
-uses: docker/setup-qemu-action@v3
-
--
-
-name: Set up Docker Buildx
-
-uses: docker/setup-buildx-action@v3
-
--
-
-name: Login to DockerHub
-
-uses: docker/login-action@v3
-
-with:
-
-username: ${{ secrets.DOCKER_HUB_USERNAME }}
-
-password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
--
-
-name: prepare the docker-compose run
-
-run: |
-
-ls -l
-
--
-
-name: Build and push
-
-uses: docker/build-push-action@v6
-
-with:
-
-context: .
-
-push: true
-
-tags: {your docker user name}/234-deploylab-frontend:latest
-
--
-
-name: copy file via ssh password
-
-uses: appleboy/scp-action@v0.1.7
-
-with:
-
-host: ${{secrets.HOST_SERVER}}
-
-username: ${{ secrets.HOST_USER_NAME }}
-
-key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
-
-port: 22
-
-source: "docker-compose.yml"
-
-target: "/home/ubuntu/frontend"
-
--
-
-name: docker compose
-
-uses: appleboy/ssh-action@v1.2.1
-
-with:
-
-host: ${{secrets.HOST_SERVER}}
-
-username: ${{ secrets.HOST_USER_NAME }}
-
-key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
-
-port: 22
-
-script: |
-
-cd /home/ubuntu/frontend
-
-echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-
-docker compose down
-
-docker compose pull
-
-docker compose up -d
-
-rm -rf /home/ubuntu/frontend
+      - name: Deploy with Docker Compose
+        uses: appleboy/ssh-action@v1.2.1
+        with:
+          host: ${{ secrets.HOST_SERVER }}
+          username: ${{ secrets.HOST_USER_NAME }}
+          key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            cd /home/ubuntu/frontend
+            echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+            docker compose down
+            docker compose pull
+            docker compose up -d
+            rm -rf /home/ubuntu/frontend
